[package]
name = "chatsystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["full"]}
axum = {version = "0.7.4"}
hyper = {version = "1.2.0"}
thirtyfour = {version = "0.31.0"}
serde = {version = "1.0.197"}
tower-http = {version = "*", features = ["cors"]}
tower = {version = "*"}